[tool.poetry]
name = "db"
version = "0.1.0"
description = "Database management tool for wizbattle"
authors = ["Valentin B. <valentin.be@protonmail.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
katsuba = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
